adding create and add bucketlist forms

--- a/templates/index.html
+++ b/templates/index.html
@@ -71,7 +71,7 @@
                     <h6 class="section-heading"></h6>
                     <a class="links1" href="create.html">Create Bucketlist</a><br><br>
                     <a class="links1" href="#">My Bucketlist</a><br><br>
-                    <a class="links1" href="#">Add Activities</a>
+                    <a class="links1" href="Add.html">Add Activities</a>
                     <h6 class="section-heading"></h6>
                     
                 </div>
