setting up template files and linking to static ones

--- a/app/templates/create.html
+++ b/app/templates/create.html
@@ -5,7 +5,7 @@
 
 
 		<!-- Website CSS style -->
-		<link href="css/bootstrap.min.css" rel="stylesheet">
+		<link href="{{ url_for('static', filename='bootstrap.min.css') }}" rel="stylesheet">
 
 		<!-- Website Font style -->
 	    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.1/css/font-awesome.min.css">
