--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -14,7 +14,7 @@
         <link href='https://fonts.googleapis.com/css?family=Passion+One' rel='stylesheet' type='text/css'>
         <link href='https://fonts.googleapis.com/css?family=Oxygen' rel='stylesheet' type='text/css'>
 
-        <title>Register</title>
+        <title>{% block title %}{% endblock %}</title>
     </head>
     <body>
         <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
@@ -47,15 +47,12 @@
         <!-- /.container -->
     </nav>
     <br><br><br><br>
-        <form>
-  <div class="form-group">
-    <label for="email">Activity</label>
-    <input type="email" class="form-control" id="email">
-  </div>
-  
-  
-  <button type="submit" class="btn btn-default">Add</button>
-</form>
+        {% block body %}
+      
+        {% endblock %}
+    <footer class="footer">
+        <p>© 2017   </p>
+      </footer>
 
          <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
