linking js files and updating templates

--- a/app/templates/create.html
+++ b/app/templates/create.html
@@ -1,16 +1,20 @@
 
 
 {% extends "base.html" %}
-{% block title %}Create activity{% endblock %}
+{% block title %}Create Bucket-list{% endblock %}
 {% block body %}
 <form>
   <div class="form-group">
-    <label for="email">Activity</label>
-    <input type="email" class="form-control" id="email">
+    <label for="activity">New Bucket-list</label>
+    <input type="text" class="form-control" id="text">
+    <input type="text" class="form-control" id="text">
+    <input type="text" class="form-control" id="text">
+    <input type="text" class="form-control" id="text">
+    <input type="text" class="form-control" id="text">
   </div>
   
   
-  <button type="submit" class="btn btn-default">Add</button>
+  <button type="submit" class="btn btn-default">Create</button>
 </form>
 
 {% endblock %}
