--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -8,7 +8,7 @@
                 <div class="col-lg-12">
                     <h6 class="section-heading"></h6>
                     <a class="links1" href="create.html">Create Bucketlist</a><br><br>
-                    <a class="links1" href="#">My Bucketlist</a><br><br>
+                    <a class="links1" href="viewblist.html">My Bucketlist</a><br><br>
                     <a class="links1" href="Add.html">Add Activities</a>
                     <h6 class="section-heading"></h6>
                     
