--- a/app/templates/Add.html
+++ b/app/templates/Add.html
@@ -5,12 +5,12 @@
 {% block body %}
        <form>
   <div class="form-group">
-    <label for="email">Activity</label>
-    <input type="email" class="form-control" id="email">
+    <label for="email">Add Activity</label>
+    <input type="text" class="form-control" id="text">
   </div>
   
   
-  <button type="submit" class="btn btn-default">Add</button>
+  <button type="submit" class="btn btn-default">Add Activity</button>
 </form>
 
 {% endblock %}
