--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -21,14 +21,14 @@
       
       <form id="signin" class="navbar-form navbar-center" role="form">
                         <div class="input-group">
-                            <span class="input-group-addon"><i class="glyphicon glyphicon-user"></i></span>
+                            <span class="input-group-addon"><i class="fa fa-user fa" aria-hidden="true"></i></span>
                             <input id="email" type="email" class="form-control" name="email" value="" placeholder="Email Address">                                        
-                        </div>
+                        </div><br/>
 
                         <div class="input-group">
-                            <span class="input-group-addon"><i class="glyphicon glyphicon-lock"></i></span>
+                            <span class="input-group-addon"><i class="fa fa-lock fa" aria-hidden="true"></i></span>
                             <input id="password" type="password" class="form-control" name="password" value="" placeholder="Password">                                        
-                        </div>
+                        </div><br/>
 
                         <button type="submit" class="btn btn-primary">Login</button>
                    </form>
